# avs

./: CMakeLists.txt  README.md  build.sh
dependencies/cmake/: draco.cmake
dependencies/hpm-HPM-15.0/: .gitignore  CMakeLists.txt  Readme.txt
dependencies/hpm-HPM-15.0/app/: app_bitstream_downsample.c  app_bitstream_merge.c  app_decoder.c  app_encoder.c  app_util.h
dependencies/hpm-HPM-15.0/cfg/: encode_AI.cfg  encode_CRR.cfg  encode_IBBB.cfg  encode_IBBBCRR.cfg  encode_LD.cfg  encode_LDP.cfg  encode_RA.cfg  encode_RA_GOP16.cfg
dependencies/hpm-HPM-15.0/inc/: com_ComAdaptiveLoopFilter.h  com_def.h  com_esao.h  com_ipred.h  com_itdq.h  com_mc.h  com_picman.h  com_port.h  com_recon.h  com_sao.h  com_tbl.h  com_typedef.h  com_usp.h  com_util.h  dec_DecAdaptiveLoopFilter.h  dec_def.h  dec_eco.h  dec_util.h  enc_EncAdaptiveLoopFilter.h  enc_def.h  enc_eco.h  enc_esao.h  enc_mode.h  enc_optimization.h  enc_optimization_wrapper.h  enc_pibc.h  enc_pinter.h  enc_pintra.h  enc_sad.h  enc_sp.h  enc_tbl.h  enc_temporalFilter.h  enc_tq.h  enc_util.h
dependencies/hpm-HPM-15.0/res/: AVS3_CTC_HPM10.0vsHPM9.1.xlsm  AVS3_CTC_HPM10.1vsHPM10.0.xlsm  AVS3_CTC_HPM11.0vsHPM10.1.xlsm  AVS3_CTC_HPM11.1vsHPM11.0.xlsm  AVS3_CTC_HPM12.0vsHPM11.1.xlsm  AVS3_CTC_HPM12.1vsHPM12.0.xlsm  AVS3_CTC_HPM12.2.1vsHPM12.2.xlsm  AVS3_CTC_HPM12.2vsHPM12.1.xlsm  AVS3_CTC_HPM13.0vsHPM12.2.xlsm  AVS3_CTC_HPM13.1vsHPM12.1.xlsm  AVS3_CTC_HPM13.1vsHPM13.0.xlsm  AVS3_CTC_HPM14.0vsHPM13.1.xlsm  AVS3_CTC_HPM14.1vsHPM14.0.xlsm  AVS3_CTC_HPM14.2.1vsHPM14.2.xlsm  AVS3_CTC_HPM14.2vsHPM14.1.xlsm  AVS3_CTC_HPM15.0vsHPM14.2.1.xlsm  AVS3_CTC_HPM9.0vsHPM8.1.xlsm  AVS3_CTC_HPM9.1vsHPM9.0.xlsm
dependencies/hpm-HPM-15.0/src/: com_ComAdaptiveLoopFilter.c  com_df.c  com_esao.c  com_ipred.c  com_itdq.c  com_mc.c  com_picman.c  com_recon.c  com_sao.c  com_tbl.c  com_util.c  dec.c  dec_DecAdaptiveLoopFilter.c  dec_eco.c  dec_util.c  enc.c  enc_EncAdaptiveLoopFilter.c  enc_eco.c  enc_esao.c  enc_ibc_hashmap.cpp  (+9 more)
source/decode/: CMakeLists.txt  decode.cpp  draco_decoder.cpp  draco_decoder.h  hpm_decoder.c  hpm_decoder.h  options.h
source/encode/: CMakeLists.txt  draco_encoder.cpp  draco_encoder.h  encode.cpp  hpm_encoder.c  hpm_encoder.h  options.h
(+5 files in other folders)
